--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
+      </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Linea Superior horizontal-->
     <section>
-    <header>
     <div class="top container">
       <nav class="nav">
-        <a href="index.html"></a><span class="logo">WebStudio</span></a>
+        <a href="index.html" class="logo">WebStudio</a>
       </nav>
       <ul class="top_navigation">
         <li class="navigation">
@@ -38,15 +40,16 @@
         </li>
       </ul>
     </div> 
-  </section>
-    </header>
+   </header>
     <main>
       <section class="hero container">
-        <!--Titulo - Seccion Principal-->
-        <h1 class="hero_title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+        <div class="principal">
+        <h1 class="hero_title">SOLUCIONES EFICACES PARA <br />
+           SU NEGOCIO</h1>
         <button class="button_contact" type="button">
           Solicite nuestro servicio
         </button>
+      </div>
       </section>
       <section class="our_services container">
         <!--<h2>Beneficios</h2>-->
@@ -115,6 +118,7 @@
         <h2 class="title2">Nuestro Equipo</h2>
         <ul class="team_list">
           <li class="team_img">
+            <div class="card_team">
             <img
               src="./imag/team1.jpg"
               width="270"
@@ -122,9 +126,10 @@
               alt="Andrés Cubo"
             />
             <h3>Andrés Cubo</h3>
-            <p class="parrafo">Diseñador de Productos</p>
+            <p class="parrafo">Diseñador de Productos</p></div>
           </li>
           <li>
+            <div class="card_team">
             <img
               src="./imag/team2.jpg"
               width="270"
@@ -132,9 +137,10 @@
               alt="Carla Palacios"
             />
             <h3>Carla Palacios</h3>
-            <p class="parrafo">Desarrolladora Frontend</p>
+            <p class="parrafo">Desarrolladora Frontend</p></div>
           </li>
           <li>
+            <div class="card_team">
             <img
               src="./imag/team3.jpg"
               width="270"
@@ -142,9 +148,10 @@
               alt="Mario Dorado"
             />
             <h3>Mario Dorado</h3>
-            <p class="parrafo">Marketing</p>
+            <p class="parrafo">Marketing</p></div>
           </li>
           <li>
+            <div class="card_team">
             <img
               src="./imag/team4.jpg"
               width="270"
@@ -152,20 +159,22 @@
               alt="Pablo Mijangos"
             />
             <h3>Pablo Mijangos</h3>
-            <p class="parrafo">Diseñador IU</p>
+            <p class="parrafo">Diseñador IU</p></div>
           </li>
         </ul>
       </section>
     </main>
     <section class="footer container">
       <footer>
-        <span><a class="logo" href="/index.html">WebStudio</a></span>
+      <a class="logo" href="/index.html">WebStudio</a>
         <nav>
           <address>
             <ul class="footer_navigation">
+           
               <li class="foot_nav">
                 Calz. Ticomán 500, Ciudad de México, CDMX, México
               </li>
+
               <li class="foot_nav">
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
