--- a/portafolio.html
+++ b/portafolio.html
@@ -11,26 +11,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Linea Superior horizontal-->
     <header>
       <div class="top container">
-        <nav>
-          <a class="logo" href="/index.html">WebStudio</a>
+        <nav class="nav">
+          <a href="index.html" class="logo">WebStudio</a>
+          <ul class="top_navigation">
+            <li class="navigation">
+              <a class="link" href="/index.html">Estudio</a>
+            </li>
+            <li class="navigation">
+              <a class="link" href="/portafolio.html">Portafolio</a>
+            </li>
+            <li class="navigation"><a class="link" href="#">Contactos</a></li>
+          </ul>
         </nav>
-        <ul class="top_navigation">
-          <li class="navigation">
-            <a class="link" href="/index.html">Estudio</a>
-          </li>
-          <li class="navigation">
-            <a class="link" href="/portafolio.html">Portafolio</a>
-          </li>
-          <li class="navigation"><a class="link" href="#">Contactos</a></li>
-        </ul>
         <ul class="inf_navigation">
           <li class="inf">
             <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com</a>
           </li>
           <li class="inf">
             <a class="link" href="tel:+525555296000">+52 55 5529 6000</a>
@@ -38,8 +36,10 @@
         </ul>
       </div>
     </header>
+       <!--Linea Superior horizontal-->
+    <header>
     <main>
-      <section class="portfolio container">
+      <div class="portfolio container">
              <ul class="main_portfolio">
           <li class="port_menu"><button class="link"> Todo</button></a></li>
           <li class="port_menu"> <button class="link"> Sitios-web</button></a></li>
@@ -151,7 +151,7 @@
             <p class="parrafo">Aplicaciones</p></div>
           </li>
         </ul>
-      </section>
+      </div>
     </main>
     <section class="footer container">
       <footer>
