--- a/portafolio.html
+++ b/portafolio.html
@@ -8,6 +8,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
+    </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -16,21 +19,21 @@
         <nav class="nav">
           <a href="index.html" class="logo">WebStudio</a>
           <ul class="top_navigation">
-            <li class="navigation">
-              <a class="link" href="/index.html">Estudio</a>
+            <li class="navigation current">
+              <a class="link" href="index.html">Estudio</a>
             </li>
-            <li class="navigation">
-              <a class="link" href="/portafolio.html">Portafolio</a>
+            <li class="navigation current">
+              <a class="link" href="portafolio.html">Portafolio</a>
             </li>
-            <li class="navigation"><a class="link" href="#">Contactos</a></li>
+            <li class="navigation current"><a class="link" href="#">Contactos</a></li>
           </ul>
         </nav>
         <ul class="inf_navigation">
-          <li class="inf">
+          <li class="inf current">
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a>
           </li>
-          <li class="inf">
+          <li class="inf current">
             <a class="link" href="tel:+525555296000">+52 55 5529 6000</a>
           </li>
         </ul>
@@ -41,112 +44,109 @@
     <main>
       <div class="portfolio container">
              <ul class="main_portfolio">
-          <li class="port_menu"><button class="link"> Todo</button></a></li>
-          <li class="port_menu"> <button class="link"> Sitios-web</button></a></li>
-          <li class="port_menu"> <button class="link"> Aplicaciones</button> </a></li>
-          <li class="port_menu"> <button class="link"> Diseño</button></a></li>
-          <li class="port_menu"> <button class="link"> Marketing</button></a></li>
+          <li class="port_menu"><button class="filter_button current-button"> Todo</button></li>
+          <li class="port_menu"> <button class="filter_button"> Sitios-web</button></li>
+          <li class="port_menu"> <button class="filter_button"> Aplicaciones</button></li>
+          <li class="port_menu"> <button class="filter_button"> Diseño</button></li>
+          <li class="port_menu"> <button class="filter_button"> Marketing</button></li>
         </ul>    
         <ul class="port_img">
-          <li>
-            <div class="card_port">
+          <li class="card_port">
             <img
               src="./imag/1tecnoduck.jpg"
               alt="1proyecto"
               width="370px"
               height=" 294px"
             />
+            <div class="item">
             <h3>Tecnoduck</h3>
             <p class="parrafo">Sitio-web</p>
           </div>
           </li>
-          <li>
-            <div class="card_port">
+          <li class="card_port">
             <img
               src="./imag/2post.jpg"
-              alt="2proyecto"
               width="370px"
               height=" 294px"
             />
+            <div class="item">
             <h3>Póster de Nueva Orleans vs Estrella Dorada</h3>
             <p class="parrafo">Diseño</p>
           </div>
+        </li>
           </li>
-
-          <li>
-            <div class="card_port">
+          <li class="card_port">
             <img
               src="./imag/3restaurant.jpg"
               alt="3proyecto"
               width="370px"
               height=" 294px"
             />
+            <div class="item">
             <h3>Restaurante Seafood</h3>
             <p class="parrafo">Aplicaciones</p></div>
           </li>
-          <li>
-            <div class="card_port">
+          <li class="card_port">
             <img
               src="./imag/4proyectoprime.jpg"
               alt="4proyecto"
               width="370px"
               height=" 294px"
-            />
+            />   <div class="item">
             <h3>Proyecto Prime</h3>
             <p class="parrafo">Marketing</p></div>
           </li>
-          <li>
-            <div class="card_port">
+          <li class="card_port">
             <img
               src="./imag/5proyectocajas.jpg"
               alt="5proyecto"
               width="370px"
               height=" 294px"
             />
+            <div class="item">
             <h3>Proyecto Cajas</h3>
             <p class="parrafo">Aplicaciones</p></div>
           </li>
-          <li>
-            <div class="card_port">
-            <img
+          <li class="card_port">
+                     <img
               src="./imag/6inspiracion.jpg"
               alt="6proyecto"
               width="370px"
               height=" 294px"
             />
+            <div class="item">
             <h3>La inspiración no tiene límites</h3>
             <p class="parrafo">Sitio-web</p></div>
           </li>
-          <li>
-            <div class="card_port" >
+          <li class="card_port">
+            
             <img
               src="./imag/7edicionlimitada.jpg"
               alt="7proyecto"
               width="370px"
               height=" 294px"
-            />
+            /><div class="item">
             <h3>Edición Limitada</h3>
             <p class="parrafo">Diseño</p></div>
           </li>
-          <li>
-            <div class="card_port">
+          <li class="card_port">
+            
             <img
               src="./imag/8proyectolab.jpg"
               alt="8proyecto"
               width="370px"
               height=" 294px"
-            />
+            /><div class="item">
             <h3>Proyecto LAB</h3>
             <p class="parrafo">Marketing</p></div>
           </li>
-          <li>
-            <div class="card_port">
-            <img
+          <li class="card_port">
+                       <img
               src="./imag/9negociocreci.jpg"
               alt="9proyecto"
               width="370px"
               height=" 294px"
-            />
+            /> <div class="item">
             <h3>Negocio en Crecimiento</h3>
             <p class="parrafo">Aplicaciones</p></div>
           </li>
@@ -162,12 +162,12 @@
               <li class="foot_nav">
                 Calz. Ticomán 500, Ciudad de México, CDMX, México
               </li>
-              <li class="foot_nav">
+              <li class="foot_nav current">
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="foot_nav">
+              <li class="foot_nav current">
                 <a class="link" href="tel:+525555296000">+52 55 5529 6000</a>
               </li>
             </ul>
