--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
         <nav class="nav">
           <a href="index.html" class="logo">WebStudio</a>
           <ul class="top_navigation">
-            <li class="navigation">
-              <a class="link" href="/index.html">Estudio</a>
+            <li class="navigation current">
+              <a class="link" href="index.html">Estudio</a>
             </li>
-            <li class="navigation">
-              <a class="link" href="/portafolio.html">Portafolio</a>
+            <li class="navigation current">
+              <a class="link" href="portafolio.html">Portafolio</a>
             </li>
-            <li class="navigation"><a class="link" href="#">Contactos</a></li>
+            <li class="navigation current">
+              <a class="link" href="#">Contactos</a>
+            </li>
           </ul>
         </nav>
         <ul class="inf_navigation">
-          <li class="inf">
+          <li class="inf current">
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="inf">
+          <li class="inf current">
             <a class="link" href="tel:+525555296000">+52 55 5529 6000</a>
           </li>
         </ul>
@@ -44,7 +46,7 @@
       <section class="hero">
         <div class="container principal">
           <h1 class="hero_title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-          <button class="button_contact" type="button">
+          <button class="button_contact current" type="button">
             Solicite nuestro servicio
           </button>
         </div>
@@ -177,12 +179,12 @@
                 Calz. Ticomán 500, Ciudad de México, CDMX, México
               </li>
 
-              <li class="foot_nav">
+              <li class="foot_nav current">
                 <a class="link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="foot_nav">
+              <li class="foot_nav current">
                 <a class="link" href="tel:+525555296000">+52 55 5529 6000</a>
               </li>
             </ul>
