--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="top container">
         <nav class="nav">
           <a href="index.html" class="logo">WebStudio</a>
@@ -115,63 +115,65 @@
           </li>
         </ul>
       </div>
-      <div class="team container">
-        <h2 class="title2">Nuestro Equipo</h2>
-        <ul class="team_list">
-          <li class="team_img">
-            <div class="card_team">
-              <img
-                src="./imag/team1.jpg"
-                width="270"
-                height="260"
-                alt="Andrés Cubo"
-              />
-              <h3>Andrés Cubo</h3>
-              <p class="parrafo">Diseñador de Productos</p>
-            </div>
-          </li>
-          <li>
-            <div class="card_team">
-              <img
-                src="./imag/team2.jpg"
-                width="270"
-                height="260"
-                alt="Carla Palacios"
-              />
-              <h3>Carla Palacios</h3>
-              <p class="parrafo">Desarrolladora Frontend</p>
-            </div>
-          </li>
-          <li>
-            <div class="card_team">
-              <img
-                src="./imag/team3.jpg"
-                width="270"
-                height="260"
-                alt="Mario Dorado"
-              />
-              <h3>Mario Dorado</h3>
-              <p class="parrafo">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div class="card_team">
-              <img
-                src="./imag/team4.jpg"
-                width="270"
-                height="260"
-                alt="Pablo Mijangos"
-              />
-              <h3>Pablo Mijangos</h3>
-              <p class="parrafo">Diseñador IU</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+      <section class="our_team">
+        <div class="team container">
+          <h2 class="title2">Nuestro Equipo</h2>
+          <ul class="team_list">
+            <li class="team_img">
+              <div class="card_team">
+                <img
+                  src="./imag/team1.jpg"
+                  width="270"
+                  height="260"
+                  alt="Andrés Cubo"
+                />
+                <h3>Andrés Cubo</h3>
+                <p class="parrafo">Diseñador de Productos</p>
+              </div>
+            </li>
+            <li>
+              <div class="card_team">
+                <img
+                  src="./imag/team2.jpg"
+                  width="270"
+                  height="260"
+                  alt="Carla Palacios"
+                />
+                <h3>Carla Palacios</h3>
+                <p class="parrafo">Desarrolladora Frontend</p>
+              </div>
+            </li>
+            <li>
+              <div class="card_team">
+                <img
+                  src="./imag/team3.jpg"
+                  width="270"
+                  height="260"
+                  alt="Mario Dorado"
+                />
+                <h3>Mario Dorado</h3>
+                <p class="parrafo">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div class="card_team">
+                <img
+                  src="./imag/team4.jpg"
+                  width="270"
+                  height="260"
+                  alt="Pablo Mijangos"
+                />
+                <h3>Pablo Mijangos</h3>
+                <p class="parrafo">Diseñador IU</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <div class="footer container">
-      <footer>
-        <a class="logo" href="/index.html">WebStudio</a>
+    <div class="footer_section">
+      <footer class="footer container">
+        <a class="logo_footer" href="/index.html">WebStudio</a>
         <nav>
           <address>
             <ul class="footer_navigation">
