--- a/portafolio.html
+++ b/portafolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="top container">
         <nav class="nav">
           <a href="index.html" class="logo">WebStudio</a>
@@ -153,9 +153,10 @@
         </ul>
       </div>
     </main>
+    <div class="footer_section">
     <section class="footer container">
       <footer>
-        <span><a class="logo" href="/index.html">WebStudio</a></span>
+        <span><a class="logo_footer" href="/index.html">WebStudio</a></span>
         <nav>
           <address>
             <ul class="footer_navigation">
@@ -175,5 +176,6 @@
         </nav>
       </footer>
     </section>
+  </div>
   </body>
 </html>
